//
// Copyright 2017-2018 Plexus Interop Deutsche Bank AG
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax="proto3";

package plexus.interop.testing;

option csharp_namespace="Plexus.Interop.Testing.Generated";

message EchoRequest {
	string string_field = 1;
	int64 int64_field = 2;
	uint32 uint32_field = 3;
	repeated double repeated_double_field = 4;
	SubEnum enum_field = 5;
	SubMessage sub_message_field = 6;
	repeated SubMessage repeated_sub_message_field = 7;

	message SubMessage {
		bytes bytes_field = 1;
		string string_field = 2;
	}

	enum SubEnum {
		value_one = 0;
		value_two = 1;
	}
}
 